Fixed color contrast

--- a/src/elements/button.css
+++ b/src/elements/button.css
@@ -6,7 +6,7 @@ button {
 	font-family: inherit;
 	font-size: inherit;
 	line-height: inherit;
-	color: white;
+	color: #ffffff;
 }
 
 button:enabled {
